# ProgettoRustHolyRust

./: CONTRIBUTE.md  Cargo.toml  rustfmt.toml  specs.md
.cargo/: config.toml
src/: lib.rs  main.rs  main2.rs  my_robot.rs  wgenerator.rs
src/Tools/: Dijkstra.rs  mod.rs
src/Tools/ShortAndGo/: Dijkstra.rs
src/energy/: mod.rs
src/event/: events.rs
src/interface/: mod.rs
src/runner/: backpack.rs  mod.rs
src/tests/: backpack_test.rs  energy_tests.rs  interface_tests.rs  mod.rs  reach_tiles_test.rs  runner_test.rs  tool_test.rs  utils_test.rs  world_tests.rs
src/tools/: best_path.rs  dijkstra.rs  mod.rs  reach_tiles.rs  search_and_go.rs
src/utils/: mod.rs
src/world/: coordinates.rs  environmental_conditions.rs  mod.rs  score.rs  tile.rs  world_generator.rs
tests/: integration_tests.rs
