[package]
authors = ["Federico Frigerio","Federico Menegoz","Filippo Lollato","iwannabeacookie","Davide Castellani","MocDenny","Salvatore Gilles Cassarà","Alessio Blascovich","Marco ཀ ʖ̯ ཀ","Praisethefab","Giuliopime","Alessio Amiri","Andrea Bissoli","Sasso0101","Lorysmutti","m0rg123","mpossamai107","Alessio Faieta","timmfy","Guglielmo Boi","SaraFrancavilla","thegavereguy","GioGio31","Alessandro Guida","Gianluca R.","Luca Podavini"]
name = "robotics_lib"
version = "0.1.19"
edition = "2021"
exclude = [".*"]

[lib]
name = "robotics_lib"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = [] }
strum = "0.25.0"
strum_macros = { version = "0.25.3", features = [] }
serde = { version = "1.0.193", features = ["derive"] }